--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npx markdown-link-check README.md
+    - run: npx cspell README.md
